--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,5 +1,5 @@
 <h1 class="update">
-  <span>2011/08/02</span> Release 0.01
+<span>2011/08/02</span> Release 0.02
 </h1>
 
-First release
+Sparkle integration for automatic updates
